src/test/ui/not-enough-arguments.stderr
error[E0061]: this function takes 4 arguments but 3 arguments were supplied
  --> $DIR/not-enough-arguments.rs:10:3
   |
LL | fn foo(a: isize, b: isize, c: isize, d:isize) {
   | --------------------------------------------- defined here
...
LL |   foo(1, 2, 3);
   |   ^^^ -  -  - supplied 3 arguments
   |   |
   |   expected 4 arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
